# rag-feedback-loop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELATED_WORK.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
cag/: __init__.py  api.py  clustering.py  feedback.py  ingest.py  judge.py  retriever.py  store.py  store_sqlite.py
data/: mbpp_sweep_cache.jsonl
rrl/: __init__.py  api.py  clustering.py  feedback.py  ingest.py  judge.py  retriever.py  store.py  store_sqlite.py
sim/: gate_c_verifier.py  harness.py  run_gate_a.py  run_gate_b.py  run_gate_c.py  run_gate_d.py  run_gate_recurring.py  verify_isolation.py  verify_robustness.py
tests/: test_api.py  test_clustering.py  test_feedback.py  test_retriever.py  test_robustness.py  test_store_sqlite.py
